--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -3,12 +3,10 @@
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
             <p>home page welcome adventurer</p>
+                <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
+                <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
         </div>
-        <div class="col-sm-3">
-            <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
-            <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
-            <button type="button" class="btn btn-def btn-block" name="logout" onclick="logout();">Logout</button>
-        </div>
+        <div class="col-sm-3"></div>
     </div>
 
     <div class="row mainCon">
