--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -5,6 +5,7 @@
             <p>home page welcome adventurer</p>
                 <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
                 <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
+                <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showShop();">Shop</button>
         </div>
         <div class="col-sm-3"></div>
     </div>
