Updated Chara creation and fixed the scrolling bug

--- a/Resources/html/charaCreLoads.html
+++ b/Resources/html/charaCreLoads.html
@@ -1,16 +1,15 @@
 ﻿<div id="charaCre">
     <div class="row">
         <div class="col-sm-3"></div>
-        <div class="col-sm-6">
-            <p>character creation</p>
+        <div class="col-sm-6 text-center">
+            <H1>Create a Charactor</H1>
         </div>
         <div class="col-sm-3"></div>
     </div>
     <div class="row">
-        <div class="col-sm-8">
-            <!--image here-->
+         <div class="col-sm-4"> 
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <form action="?" method="post" name="charaCreForm" id="charaCreForm">
                 <div class="form-group input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
@@ -21,5 +20,20 @@
                 </div>
             </form>
         </div>
+        <div class="col-sm-4">
+            
+        </div>
+    </div>
+        <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6">
+                <div> <i class="glyphicon glyphicon-book"></i> XP: <span id="xpVal">??</span></div>
+                <div> <i class="glyphicon glyphicon-scale"></i> Strength: <span id="strVal">??</span></div>
+                <div> <i class="glyphicon glyphicon-screenshot"></i> Agility: <span id="agiVal">??</span></div>
+                <div> <i class="glyphicon glyphicon-fast-forward"></i> Stamina: <span id="stamVal">??</span></div>
+                <div> <i class="glyphicon glyphicon-fire"></i> Magic: <span id="magVal">??</span></div>
+           <img src="/Resources/image/charTemp.jpg" style="max-width:100%; max-height:100%;">
+        </div>
+        <div class="col-sm-3"></div>
     </div>
 </div>
