forgot two files

--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -5,7 +5,8 @@
             <p>home page welcome adventurer</p>
                 <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
                 <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
-                <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showShop();">Shop</button>
+                <button type="button" class="btn btn-def btn-block" name="shop_Show_But" onclick="showShop();">Shop</button>
+                <button type="button" class="btn btn-def btn-block" name="invent_show_Nut" onclick="showInvent();">Inventory</button>
         </div>
         <div class="col-sm-3"></div>
     </div>
