--- a/Resources/html/navBar.html
+++ b/Resources/html/navBar.html
@@ -1,11 +1,11 @@
 <div class="container" id="preLogin">
-  <div class="navbar-header"> <a class="navbar-brand"><span>The Adventres Guild</span></a> </div>
+  <div class="navbar-header"> <a class="navbar-brand" onclick='changeLoc("home");'><span>The Adventres Guild</span></a> </div>
 </div>
 
 <div class="container" id="main">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse"> <span class="sr-only">Expand</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-    <a class="navbar-brand"><span>The Adventres Guild</span></a> </div>
+    <a class="navbar-brand" onclick='changeLoc("home");'><span>The Adventres Guild</span></a> </div>
   <div class="collapse navbar-collapse" id="navbar-ex-collapse">
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="userName">Username</span> <span class="caret"></span></a>
