all current working changes and some unfinished data loadins on shop and items

--- a/Resources/html/shop.html
+++ b/Resources/html/shop.html
@@ -20,6 +20,9 @@ img.charaImage{
 }
 </style>
 <div id="shop" class="noselect">
+    <div id="list">
 
+    </div>
+    <script src="Scripts/js_ajax/itemGrid.js"></script>
 </div>
 
