--- a/Resources/html/navBar.html
+++ b/Resources/html/navBar.html
@@ -8,7 +8,7 @@
     <a class="navbar-brand" onclick='logoClick();'><span>The Adventres Guild</span></a> </div>
   <div class="collapse navbar-collapse" id="navbar-ex-collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="userName">Username</span> <span class="caret"></span></a>
+      <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href=""><span id="userName">Username</span> <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Account Settings</a></li>
           <li><a onclick="logout();">Logout</a></li>
