--- a/Resources/html/navBar.html
+++ b/Resources/html/navBar.html
@@ -1,13 +1,14 @@
 <div class="container" id="preLogin">
-  <div class="navbar-header"> <a class="navbar-brand" onclick='logoClick();'><span>The Adventres Guild</span></a> </div>
+  <div class="navbar-header"> <a class="navbar-brand" onclick='logoClick();'><span>The Adventurers Guild</span></a> </div>
 </div>
 
 <div class="container" id="main">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse"> <span class="sr-only">Expand</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-    <a class="navbar-brand" onclick='logoClick();'><span>The Adventres Guild</span></a> </div>
+    <a class="navbar-brand" onclick='logoClick();'><span>The Adventurers Guild</span></a> </div>
   <div class="collapse navbar-collapse" id="navbar-ex-collapse">
     <ul class="nav navbar-nav navbar-right">
+      <li><a><i class="glyphicon glyphicon-xbt"></i> <span id="gold"></span></a></li>
       <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="userName">Username</span> <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Account Settings</a></li>
