attempting to use submit capture on loginForm to allow for enter key pressing and saving user login info to browser login data

--- a/Resources/html/loads.html
+++ b/Resources/html/loads.html
@@ -29,6 +29,7 @@
                     </label>
                 </div>
                 <div class="form-group">
+                    <!--<input type="submit" class="btn btn-def btn-block" name="login_reg_but" value="Login" />-->
                     <button type="button" class="btn btn-def btn-block" onclick="preSubmit();"  name="login_reg_but">Login</button>
                     <div class="g-recaptcha" data-sitekey="6LegnhAUAAAAAPqP5I4qg_4DxpV7tJwl2pAgmTTe" data-callback="onSubmit" data-size="invisible"> </div>
                 </div>
