in process of adding shopping functionality

--- a/Resources/html/shop.html
+++ b/Resources/html/shop.html
@@ -20,9 +20,18 @@ img.charaImage{
 }
 </style>
 <div id="shop" class="noselect">
-    <div id="list">
+    <div class="row">
+        <div id="list">
 
+        </div>
+        <script src="Scripts/js_ajax/itemGrid.js"></script>
     </div>
-    <script src="Scripts/js_ajax/itemGrid.js"></script>
+    <div class="row">
+        <div class="col-sm-5"></div>
+        <div class="col-sm-2" id="featureBackground">
+
+        </div>
+        <div class="col-sm-5"></div>
+    </div>
 </div>
 
