got buying working, starting equip functionaltiy

--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -6,7 +6,8 @@
                 <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
                 <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
                 <button type="button" class="btn btn-def btn-block" name="shop_Show_But" onclick="showShop();">Shop</button>
-                <button type="button" class="btn btn-def btn-block" name="invent_show_Nut" onclick="showInvent();">Inventory</button>
+                <button type="button" class="btn btn-def btn-block" name="invent_show_But" onclick="showInvent();">Inventory</button>
+                <button type="button" class="btn btn-def btn-block" name="chara_equip_show_But" onclick="showCharaEquip();">Equip</button>
         </div>
         <div class="col-sm-3"></div>
     </div>
