started stats, and tried to optimise chara lists

--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -9,9 +9,8 @@
             <div class="armorSlot" id="hand"></div>
         </div>
     </div>
-    <div id="charaList" class="noselect">
-
-    </div>
+    <div id="charaList" class="noselect"></div>
+    <script src="Scripts/js_ajax/charaHelper.js"></script>
     <script src="Scripts/js_ajax/equipHelper.js"></script>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
     <script src="Scripts/js_ajax/itemHelper.js"></script>
