--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -8,6 +8,7 @@
                 <button type="button" class="btn btn-def btn-block" name="shop_Show_But" onclick="showShop();">Shop</button>
                 <button type="button" class="btn btn-def btn-block" name="invent_show_But" onclick="showInvent();">Inventory</button>
                 <button type="button" class="btn btn-def btn-block" name="chara_equip_show_But" onclick="showCharaEquip();">Equip</button>
+                <button type="button" class="btn btn-def btn-block" name="chara_stats_show_But" onclick="showCharastats();">Stats</button>
         </div>
         <div class="col-sm-3"></div>
     </div>
