started svg implementation

--- a/Resources/html/homeLoads.html
+++ b/Resources/html/homeLoads.html
@@ -1,25 +1,17 @@
 ﻿<div id="home">
+    <div class="row mainCon" id="svgContainer">
+    </div>
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
             <p>home page welcome adventurer</p>
-                <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
-                <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
-                <button type="button" class="btn btn-def btn-block" name="shop_Show_But" onclick="showShop();">Shop</button>
-                <button type="button" class="btn btn-def btn-block" name="invent_show_But" onclick="showInvent();">Inventory</button>
-                <button type="button" class="btn btn-def btn-block" name="chara_equip_show_But" onclick="showCharaEquip();">Equip</button>
-                <button type="button" class="btn btn-def btn-block" name="chara_stats_show_But" onclick="showCharaStats();">Stats</button>
+            <button type="button" class="btn btn-def btn-block" name="cre_Show_But" onclick="showCre();">Create</button>
+            <button type="button" class="btn btn-def btn-block" name="chara_list_Show_But" onclick="showList();">List</button>
+            <button type="button" class="btn btn-def btn-block" name="shop_Show_But" onclick="showShop();">Shop</button>
+            <button type="button" class="btn btn-def btn-block" name="invent_show_But" onclick="showInvent();">Inventory</button>
+            <button type="button" class="btn btn-def btn-block" name="chara_equip_show_But" onclick="showCharaEquip();">Equip</button>
+            <button type="button" class="btn btn-def btn-block" name="chara_stats_show_But" onclick="showCharaStats();">Stats</button>
         </div>
         <div class="col-sm-3"></div>
-    </div>
-
-    <div class="row mainCon">
-        <div class="col-sm-12 mainCon">
-    
-        <div style="width:100%; height:100%; background: url(Resources/image/temp_image.svg) no-repeat;
-        background-size: 100%;">
-    </div>
-      
-        </div>
     </div>
 </div>
