should be partially implemented, should laod images but not be working with them

--- a/Resources/html/charaCreLoads.html
+++ b/Resources/html/charaCreLoads.html
@@ -1,4 +1,7 @@
 ﻿<div id="charaCre">
+    <div class="row mainCon" id="svgContainer">
+    </div>
+    <script src="Scrpts/js_ajax/svgHelper.js"></script>
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6 text-center">
