--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -1,4 +1,7 @@
 ﻿<div id="charaEquip">
+    <div class="row mainCon" id="svgContainer">
+    </div>
+    <script src="Scrpts/js_ajax/svgHelper.js"></script>
     <div id="items" hidden>
         <div id="list">
         </div>
