--- a/Resources/html/inventoryList.html
+++ b/Resources/html/inventoryList.html
@@ -1,6 +1,8 @@
 ﻿<div id="inventory" style="background-color:aqua">
     <div id="list">
-
+        <div class="row mainCon" id="svgContainer">
+    </div>
+    <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
 </div>
