--- a/Resources/html/shop.html
+++ b/Resources/html/shop.html
@@ -21,7 +21,9 @@ img.charaImage{
 </style>
 <div id="shop" class="noselect">
     <div id="list">
-
+        <div class="row mainCon" id="svgContainer">
+        </div>
+    <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
     <script src="Scripts/js_ajax/shopHelper.js"></script>
