working on finalization

--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -1,13 +1,10 @@
 ﻿<div id="charaEquip">
-    <div id="items" hidden>
-        <div id="list">
+    <div id="fullArm" class="row" style="background-repeat:no-repeat;" hidden>
+        <div id="items" class="col-md-8">
+            <div class="noselect" id="list"></div>
         </div>
-        <div id="armorStand" style="background-image:url(Resources/image/armor_stand.jpg); background-position:center;background-repeat:no-repeat; height:600px;width:100%; position:relative;">
-            <div class="armorSlot" id="head"></div>
-            <div class="armorSlot" id="chest"></div>
-            <div class="armorSlot" id="legs"></div>
-            <div class="armorSlot" id="hand"></div>
-        </div>
+        <div class="col-md-4" id="svgContainer" style="height:90vh;"></div>
+        <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
     <div id="charaList" class="noselect"></div>
     <script src="Scripts/js_ajax/charaHelper.js"></script>
