Added Error handling using toastr and made equip armor stand look better

--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -3,7 +3,7 @@
         <div id="items" class="col-md-8">
             <div class="noselect" id="list"></div>
         </div>
-        <div class="col-md-4" id="svgContainer" style="height:90vh;"></div>
+        <div class="col-md-4" id="svgContainer"></div>
         <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
     <div id="charaList" class="noselect"></div>
