started charlist redesign

--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -6,7 +6,16 @@
         <div class="col-md-4" id="svgContainer"></div>
         <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
-    <div id="charaList" class="noselect"></div>
+    <div id="charaList" class="noselect">
+        <div class="col-md-3" id="charaL0">
+        </div>
+        <div class="col-md-3" id="charaL1">
+        </div>
+        <div class="col-md-3" id="charaL2">
+        </div>
+        <div class="col-md-3" id="charaL3">
+        </div>
+    </div>
     <script src="Scripts/js_ajax/charaHelper.js"></script>
     <script src="Scripts/js_ajax/equipHelper.js"></script>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
