--- a/Resources/html/charaList.html
+++ b/Resources/html/charaList.html
@@ -1,4 +1,11 @@
-<div id="charaList" class="noselect">
-
+<div id="charaList" class="noselect row">
+    <div class="col-md-3" id="charaL0">
+    </div>
+    <div class="col-md-3" id="charaL1">
+    </div>
+    <div class="col-md-3" id="charaL2">
+    </div>
+    <div class="col-md-3" id="charaL3">
+    </div>
 </div>
 
