pretty much done

--- a/Resources/html/charaEquip.html
+++ b/Resources/html/charaEquip.html
@@ -7,13 +7,17 @@
         <script src="Scrpts/js_ajax/svgHelper.js"></script>
     </div>
     <div id="charaList" class="noselect">
-        <div class="col-md-3" id="charaL0">
+        <div class="col-md-2" id="charaL0">
         </div>
-        <div class="col-md-3" id="charaL1">
+        <div class="col-md-2" id="charaL1">
         </div>
-        <div class="col-md-3" id="charaL2">
+        <div class="col-md-2" id="charaL2">
         </div>
-        <div class="col-md-3" id="charaL3">
+        <div class="col-md-2" id="charaL3">
+        </div>
+        <div class="col-md-2" id="charaL4">
+        </div>
+        <div class="col-md-2" id="charaL5">
         </div>
     </div>
     <script src="Scripts/js_ajax/charaHelper.js"></script>
