started invent finalization

--- a/Resources/html/inventoryList.html
+++ b/Resources/html/inventoryList.html
@@ -1,5 +1,9 @@
 ﻿<div id="inventory" style="background-color:aqua">
-    <div id="list">
+    <div id="inventList" class="col-md-8">
+        <div id="list">
+        </div>
     </div>
+    <div id="svgContainer" class="col-md-4"></div>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
+    <script src="Scrpts/js_ajax/svgHelper.js"></script>
 </div>
