updating and general work

--- a/Resources/html/inventoryList.html
+++ b/Resources/html/inventoryList.html
@@ -1,4 +1,4 @@
-﻿<div id="inventory" style="background-color:aqua">
+﻿<div id="inventory" style="background-color:dimgray">
     <div id="inventList" class="col-md-8">
         <div id="list">
         </div>
