should be finsihed except for bugs that maybe descovered later

--- a/Resources/html/inventoryList.html
+++ b/Resources/html/inventoryList.html
@@ -5,5 +5,6 @@
     </div>
     <div id="svgContainer" class="col-md-4"></div>
     <script src="Scripts/js_ajax/itemGrid.js"></script>
+    <script src="Scripts/js_ajax/inventHelper.js"></script>
     <script src="Scrpts/js_ajax/svgHelper.js"></script>
 </div>
